shop-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: shop-nginx
  name: shop-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shop-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/web-network: "true"
        io.kompose.service: shop-nginx
    spec:
      containers:
        - image: registry.cw.net:5000/nginx:v1
          name: shop-nginx
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 465
          resources: {}
          tty: true
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: nginx-config
            - mountPath: /var/www
              name: www-storage
      restartPolicy: Always
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: www-storage
          persistentVolumeClaim:
            claimName: www-pvc
status: {}
