shop-php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: shop-php
  name: shop-php
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shop-php
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/web-network: "true"
        io.kompose.service: shop-php
    spec:
      containers:
        - image: registry.cw.net:5000/php:v1
          name: shop-php
          resources: {}
          tty: true
          volumeMounts:
            - mountPath: /var/www
              name: www-storage
            - mountPath: /var/log
              name: log-storage
      restartPolicy: Always
      volumes:
        - name: www-storage
          persistentVolumeClaim:
            claimName: www-pvc
        - name: log-storage
          persistentVolumeClaim:
            claimName: log-pvc
status: {}
