shop-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: shop-redis
  name: shop-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shop-redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/web-network: "true"
        io.kompose.service: shop-redis
    spec:
      containers:
        - image: redis:latest
          name: shop-redis
          resources: {}
          tty: true
      restartPolicy: Always
status: {}
