shop-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: shop-nginx
  name: shop-nginx
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
    - name: "465"
      port: 465
      targetPort: 465
    - name: "8089"
      port: 8089
      targetPort: 8089
  selector:
    io.kompose.service: shop-nginx
status:
  loadBalancer: {}
